@@ -1,6 +1,8 @@
 Revision history for Spreadsheet-HTML
 
 1.13
+    - off param now available when loading images
+    - can override table param when loading images
     - reminder: animate has been deprecated since v1.05
 
 1.12
